[package]
name = "tcp_ip"
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "User-space TCP/IP stack"
repository = "https://github.com/rustp2p/tcp_ip"
keywords = ["ip", "tcp", "udp", "icmp", "network"]

[dependencies]
bytes = "1.9"
dashmap = "6.1"
flume = { version = "0.11", features = ["async"] }
log = "0.4"
parking_lot = "0.12"
pnet_packet = "0.35"
rand = "0.9"
tokio = { version = "1.42", features = ["macros", "rt", "time"] }
tokio-util = "0.7"
num_enum = "0.7"
lazy_static = { version = "1.5.0", optional = true }

[features]
default = []
global-ip-stack = ["lazy_static"]

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
anyhow = "1"
env_logger = "0.11"
tun-rs = { version = "1.5.0", features = ["async"] }
clap = { version = "4", features = ["derive"] }

[[example]]
name = "tcp"
required-features = ["global-ip-stack"]
[[example]]
name = "udp"
required-features = ["global-ip-stack"]
[[example]]
name = "icmp"
required-features = ["global-ip-stack"]
[[example]]
name = "ipv4_ipv6"
required-features = ["global-ip-stack"]
[[example]]
name = "tcp_proxy"
required-features = ["global-ip-stack"]
[[example]]
name = "tcp_connect"
required-features = ["global-ip-stack"]